# tiktoktechjam

./: .gitignore  README.md  description1.txt  pii_detection2.py  pyproject.toml  receive_media.py  requirements.txt  runner.py  test_pii.py
agents/: agent.py  extract_audio.py  media_agent.py  prompt.py  runner.py  soft_hints.py  speechtotext.py  test_websearch.py  webcrawler.py  websearch.py  websearch_extraction.py  websearch_main.py
backend/: receive_media.py
privacy-guard/: package-lock.json  package.json  tailwind.config.js
privacy-guard/src/: App.jsx  ResultsPage.jsx  UploadPage.jsx  index.css
sentinel/: lynx.config.ts  package-lock.json  package.json  tsconfig.json
sentinel/src/: App.css  App.jsx  App.tsx  global.d.ts  index.tsx  main.tsx  postcss.config.js  tailwind.config.ts  types.ts
sentinel/src/agents/: AgentRegistry.ts  http.ts  mock.ts
sentinel/src/components/: ActionBar.tsx  AgentSettings.tsx  DangerMeter.tsx  Primitives.tsx  ResultsList.tsx  ShareComposer.tsx  UploadZone.tsx
sentinel/src/lib/: pii.ts  safeStorage.ts  score.ts
tools/: pii_detection2.py  pii_tool.py  text_extraction.py
